--- a/package.json
+++ b/package.json
@@ -1,27 +1,36 @@
 {
-  "name": "europark",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.7"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.7",
-    "@eslint/eslintrc": "^3"
-  }
+	"name": "europark",
+	"version": "1.0.0",
+	"private": true,
+	"scripts": {
+		"dev": "rm -rf .next && next dev --turbopack --experimental-https",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"prettier": "prettier --write '**/*.*'",
+		"update": "npx npm-check-updates -u && npm i",
+		"tsc": "tsc --noEmit"
+	},
+	"dependencies": {
+		"@tailwindcss/postcss": "^4.0.7",
+		"next": "15.1.7",
+		"next-intl": "^3.26.4",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@tailwindcss/typography": "^0.5.16",
+		"@types/node": "^22",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"daisyui": "^5.0.0-beta.8",
+		"eslint": "^9",
+		"eslint-config-next": "15.1.7",
+		"postcss": "^8",
+		"prettier": "^3.5.1",
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"tailwindcss": "^4.0.7",
+		"typescript": "^5"
+	}
 }
