--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
 		"tsc": "tsc --noEmit"
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^6.7.2",
+		"@fortawesome/free-brands-svg-icons": "^6.7.2",
+		"@fortawesome/react-fontawesome": "^0.2.2",
 		"@tailwindcss/postcss": "^4.0.7",
 		"next": "15.1.7",
 		"next-intl": "^3.26.4",
