--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"next": "15.1.7",
 		"next-intl": "^3.26.5",
 		"react": "^19.0.0",
+		"react-day-picker": "^9.5.1",
 		"react-dom": "^19.0.0",
 		"swiper": "^11.2.4"
 	},
