--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "rm -rf .next && next dev --turbopack --experimental-https",
 		"build": "next build",
-		"start": "next start",
+		"start": "NODE_ENV=production node server.js",
 		"lint": "next lint",
 		"prettier": "prettier --write '**/*.*'",
 		"update": "npx npm-check-updates -u && npm i",
