move from telegram to web3forms

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_APP_URL=https://europark.ba
 NEXT_PUBLIC_LANGUAGE_COOKIE=EUROPARK_LANGUAGE
+NEXT_PUBLIC_WEB3FORMS_KEY=948da48e-8597-49bf-b83b-7ac42d294b1f
