--- a/package.json
+++ b/package.json
@@ -8,35 +8,36 @@
 		"start": "next start",
 		"lint": "next lint",
 		"prettier": "prettier --write '**/*.*'",
-		"update": "npx npm-check-updates -u && npm i",
-		"tsc": "tsc --noEmit"
+		"update": "npx npm-check-updates -u",
+		"tsc": "tsc --noEmit",
+		"nextjs-codemod": "npx @next/codemod@canary upgrade latest"
 	},
 	"dependencies": {
-		"@tailwindcss/postcss": "^4.0.8",
-		"next": "15.1.7",
+		"@tailwindcss/postcss": "^4.0.9",
+		"next": "15.2.0",
 		"next-intl": "^3.26.5",
 		"react": "^19.0.0",
 		"react-day-picker": "^9.5.1",
 		"react-dom": "^19.0.0",
-		"swiper": "^11.2.4"
-	},
-	"devDependencies": {
+		"swiper": "^11.2.4",
 		"@fortawesome/fontawesome-svg-core": "^6.7.2",
 		"@fortawesome/free-brands-svg-icons": "^6.7.2",
 		"@fortawesome/react-fontawesome": "^0.2.2",
-		"@eslint/eslintrc": "^3",
 		"@heroicons/react": "^2.2.0",
 		"@tailwindcss/typography": "^0.5.16",
+		"daisyui": "^5.0.0"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
 		"@types/node": "^22",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
-		"daisyui": "^5.0.0-beta.8",
 		"eslint": "^9",
-		"eslint-config-next": "15.1.7",
+		"eslint-config-next": "15.2.0",
 		"postcss": "^8",
 		"prettier": "^3.5.2",
 		"prettier-plugin-tailwindcss": "^0.6.11",
-		"tailwindcss": "^4.0.8",
+		"tailwindcss": "^4.0.9",
 		"typescript": "^5"
 	}
 }
