--- a/package.json
+++ b/package.json
@@ -13,19 +13,20 @@
 		"nextjs-codemod": "npx @next/codemod@canary upgrade latest"
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^6.7.2",
+		"@fortawesome/free-brands-svg-icons": "^6.7.2",
+		"@fortawesome/react-fontawesome": "^0.2.2",
+		"@heroicons/react": "^2.2.0",
 		"@tailwindcss/postcss": "^4.0.9",
+		"@tailwindcss/typography": "^0.5.16",
+		"daisyui": "^5.0.0",
 		"next": "15.2.0",
 		"next-intl": "^3.26.5",
 		"react": "^19.0.0",
 		"react-day-picker": "^9.5.1",
 		"react-dom": "^19.0.0",
-		"swiper": "^11.2.4",
-		"@fortawesome/fontawesome-svg-core": "^6.7.2",
-		"@fortawesome/free-brands-svg-icons": "^6.7.2",
-		"@fortawesome/react-fontawesome": "^0.2.2",
-		"@heroicons/react": "^2.2.0",
-		"@tailwindcss/typography": "^0.5.16",
-		"daisyui": "^5.0.0"
+		"sonner": "^2.0.1",
+		"swiper": "^11.2.4"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
