--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"daisyui": "^5.0.0",
 		"next": "15.2.0",
 		"next-intl": "^3.26.5",
+		"nodemailer": "^6.10.0",
 		"react": "^19.0.0",
 		"react-day-picker": "^9.5.1",
 		"react-dom": "^19.0.0",
