--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,17 @@
 {
 	"useTabs": true,
 	"tabWidth": 4,
-	"printWidth": 100,
+	"printWidth": 110,
 	"jsxSingleQuote": true,
 	"singleQuote": true,
 	"trailingComma": "none",
-	"plugins": ["prettier-plugin-tailwindcss"]
+	"plugins": ["prettier-plugin-tailwindcss"],
+	"overrides": [
+		{
+			"files": ["*.yml", "*.yaml"],
+			"options": {
+				"tabWidth": 2
+			}
+		}
+	]
 }
