--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"nextjs-codemod": "npx @next/codemod@canary upgrade latest",
 		"pkg-update": "npx npm-check-updates -u --format group",
-		"i:clean": "rm -rf node_modules pnpm-lock.yaml; pnpm i",
+		"i:clean": "rm -rf node_modules package-lock.json; npm i",
 		"prettier": "prettier --write .",
 		"dev": "next dev --turbopack --experimental-https",
 		"dev:clean": "rm -rf .next; next dev --turbopack --experimental-https",
@@ -22,8 +22,8 @@
 		"@heroicons/react": "^2.2.0",
 		"@tailwindcss/postcss": "^4.1.4",
 		"@tailwindcss/typography": "^0.5.16",
-		"daisyui": "^5.0.23",
-		"next": "15.3.0",
+		"daisyui": "^5.0.27",
+		"next": "15.3.1",
 		"next-intl": "^4.0.2",
 		"nodemailer": "^6.10.1",
 		"react": "^19.1.0",
@@ -38,7 +38,7 @@
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"eslint": "^9",
-		"eslint-config-next": "15.3.0",
+		"eslint-config-next": "15.3.1",
 		"postcss": "^8",
 		"prettier": "^3.5.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
