--- a/package.json
+++ b/package.json
@@ -3,29 +3,29 @@
 	"version": "1.0.0",
 	"private": true,
 	"scripts": {
-		"nextjs-codemod": "npx @next/codemod@canary upgrade latest",
-		"pkg-update": "npx npm-check-updates -u --format group",
-		"i:clean": "rm -rf node_modules package-lock.json; npm i",
-		"prettier": "prettier --write .",
-		"dev": "next dev --turbopack --experimental-https",
-		"dev:clean": "rm -rf .next; next dev --turbopack --experimental-https",
-		"build": "next build",
-		"build:clean": "rm -rf .next; next build",
+		"dev": "next dev --experimental-https --turbopack",
+		"dev:clean": "rm -rf .next; next dev --experimental-https --turbopack",
+		"build": "next build --turbopack",
+		"build:clean": "rm -rf .next; next build --turbopack",
 		"start": "next start",
 		"lint": "next lint",
-		"tsc": "npx tsc --noEmit; rm -f tsconfig.tsbuildinfo"
+		"nextjs-codemod": "npx @next/codemod@canary upgrade latest",
+		"pkg-update": "npx npm-check-updates -u --format group",
+		"i:clean": "rm -rf node_modules/ package-lock.json; npm i",
+		"prettier": "prettier --write .",
+		"tsc": "tsc --noEmit; rm -f tsconfig.tsbuildinfo"
 	},
 	"dependencies": {
 		"@fortawesome/fontawesome-svg-core": "^6.7.2",
 		"@fortawesome/free-brands-svg-icons": "^6.7.2",
 		"@fortawesome/react-fontawesome": "^0.2.2",
 		"@heroicons/react": "^2.2.0",
-		"@tailwindcss/postcss": "^4.1.4",
+		"@tailwindcss/postcss": "^4.1.5",
 		"@tailwindcss/typography": "^0.5.16",
-		"daisyui": "^5.0.27",
-		"next": "15.3.1",
-		"next-intl": "^4.0.2",
-		"nodemailer": "^6.10.1",
+		"daisyui": "^5.0.35",
+		"next": "^15.3.1",
+		"next-intl": "^4.1.0",
+		"nodemailer": "^7.0.2",
 		"react": "^19.1.0",
 		"react-day-picker": "^9.6.7",
 		"react-dom": "^19.1.0",
@@ -38,11 +38,11 @@
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"eslint": "^9",
-		"eslint-config-next": "15.3.1",
+		"eslint-config-next": "^15.3.1",
 		"postcss": "^8",
 		"prettier": "^3.5.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
-		"tailwindcss": "^4.1.4",
+		"tailwindcss": "^4.1.5",
 		"typescript": "^5"
 	}
 }
