--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@heroicons/react": "^2.2.0",
 		"@tailwindcss/postcss": "^4.1.5",
 		"@tailwindcss/typography": "^0.5.16",
+		"@vercel/analytics": "^1.5.0",
 		"daisyui": "^5.0.35",
 		"next": "^15.3.1",
 		"next-intl": "^4.1.0",
